--- a/almacen_app/templates/login.html
+++ b/almacen_app/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=1366, initial-scale=0.8">
   <title>Iniciar sesión</title>
   <link rel="preload" href="static/css/normalize.css" as="style">
   <!--Da mayor velocidaad a la carga del css-->
@@ -9,7 +10,7 @@
   <!--Enlaza el css con el html-->
   <link rel="stylesheet" type="text/css" href="static/css/styles.css">
   <!-- Vincular archivo JavaScript externo -->
-  <script src="static/funcionalidad/f_login.js"></script>
+  <script src="/static/js/f_login.js"></script>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/456/456112.png" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
   
