--- a/almacen_app/templates/seleccionar_fechas.html
+++ b/almacen_app/templates/seleccionar_fechas.html
@@ -2,104 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=1366, initial-scale=0.8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Inventario e Informes</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="preload" href="/static/css/normalize.css" as="style">
+    <link rel="preload" href="/static/css/styles7.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/styles7.css">
+    <link rel="icon" href="https://www.pngmart.com/files/8/Report-PNG-Photos.png" type="image/x-icon">
+    <script src="/static/js/jquery-3.5.1.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-    <style>
-        /* Estilos generales */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('https://www.uacm.edu.mx/portals/_default/skins/wcga-uacm/images/Plantel.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            color: #0a0a0a;
-        }
-
-        /* Contenedor principal */
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9); /* Fondo semi-transparente */
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-        }
-
-        /* Encabezado */
-        h1 {
-            font-size: 24px;
-            font-weight: bold;
-            text-align: center;
-            margin-top: 20px;
-            color: #000000;
-        }
-
-        /* Formulario */
-        form {
-            margin-top: 20px;
-        }
-
-        /* Contenedor de botones */
-        .button-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        /* Botones */
-        button {
-            width: 48%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-        }
-
-        /* Tablas */
-        .table-container {
-            margin-top: 30px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); /* Sombra ligera para las tablas */
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: center;
-            border: 1px solid #dddddd;
-        }
-
-        th {
-            background-color: #f2f2f2; /* Color de fondo para las cabeceras */
-            font-weight: bold;
-        }
-
-        /* Estilos para las tablas específicas */
-        #productosTabla {
-            display: none; /* Ocultar la tabla de productos inicialmente */
-        }
-
-        #solicitudesTabla {
-            display: none; /* Ocultar la tabla de solicitudes inicialmente */
-        }
-
-        /* Estilos para mensajes de error o éxito */
-        .message {
-            margin-top: 20px;
-            text-align: center;
-            font-weight: bold;
-        }
-
-    </style>
 </head>
 <body>
     <div class="container">
@@ -139,9 +52,6 @@
         <div id="message" class="message"></div>
     </div>
 
-    <!-- JavaScript -->
-    <script src="{% static 'jquery-3.5.1.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#generarReporteProductosBtn').click(function() {
@@ -171,7 +81,7 @@
                 var fechaFin = $('#fecha_fin').val();
 
                 $.ajax({
-                    url: '{% url "generar_reporte_productos" %}',
+                    url: '{% url "generar_reportes" %}',
                     type: 'POST',
                     data: {
                         csrfmiddlewaretoken: '{{ csrf_token }}',
