--- a/almacen_app/templates/welcome.html
+++ b/almacen_app/templates/welcome.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta name="viewport" content="width=1366, initial-scale=0.8">
     <title>Sistema de Inventario</title>
     <title>Iniciar sesión</title>
     <link rel="preload" href="/static/css/normalize.css" as="style">
