--- a/almacen_app/static/css/styles3.css
+++ b/almacen_app/static/css/styles3.css
@@ -1,73 +1,152 @@
-/* HOJA DE ESTILO DE REGISTRAR PRODUCTOS */
+/* CSS de registro de productos */
 
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  color: black;
+  margin: 0;
+  background-image: url('../img/img3.jpg');
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  backdrop-filter: blur(4px);
+}
 
-    body {
-      font-family: Arial, sans-serif;
-      background-image: url('https://www.uacm.edu.mx/portals/_default/skins/wcga-uacm/images/Plantel.jpg'); /* Ruta de tu imagen de fondo */
-      background-size: contain; /* Ajusta la imagen para que se vea completa */
-      background-size: cover; /* Ajusta la imagen al tamaño de la ventana */
-      background-repeat: no-repeat; /* Evita que la imagen se repita */
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
+h1 {
+  color: #333;
+  font-family: 'Arial', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px 20px;
+  background-color: rgba(252, 140, 65, 0.788);
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  white-space: nowrap;
+  transition: all 0.3s ease;
+  display: inline-block;
+  position: relative;
+}
 
-    h1, h2 {
-      text-align: center;
-      color: #333;
-    }
+.principal {
+  color: black;
+  margin-top: 50px;
+  text-align: center;
+  font-size: 18px;
+}
 
-    form {
-      max-width: 400px;
-      margin: 0 auto;
-      background-color:rgba(255, 255, 255, 0.7);
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
+/* Estilos adicionales para el formulario */
+form {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 20px;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  max-width: 400px;
+  width: 100%; /* Se ajusta al 100% del contenedor padre */
+  box-sizing: border-box; /* Incluye el padding y el borde en el tamaño total */
+  margin: 10px;
+}
 
-    label, input {
-      display: block;
-      margin-bottom: 10px;
-    }
+form .contenido {
+  margin-right: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+}
 
-    input[type="text"],
-    input[type="number"] {
-      width: 90%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+form .contenido > * {
+  flex: 1 1 45%; /* Ajuste de los elementos para que ocupen el 45% del ancho del contenedor */
+  margin: 10px;
+  box-sizing: border-box;
+}
 
-    button {
-      background-color: #b30b0b;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      cursor: auto;
-      margin-right: 10px;
-    }
+form label,
+form input,
+form button {
+  color: black;
+  margin-top: 10px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
 
-    table {
-      max-width: 300px;
-      margin: 20px auto;
-      background-color: #fff;
-      border-collapse: separate;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      display: right; 
-      flex-direction: column; 
-      align-items: right;
-    }
+.formulario button i,
+.formulario_qr button i {
+  margin-right: 10px;
+  text-decoration: none;
+}
 
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: center;
-    }
+/* Establece el borde de los cuadros de texto como azul */
+form input {
+  width: calc(100% - 30px);
+  border: 3px solid #3c80e7;
+  border-radius: 50px;
+  padding: 10px;
+  font-size: 15px;
+  transition: border-color 0.3s ease;
+}
 
-    th {
-      background-color: rgb(235, 31, 31);
-      color: white;
-    }
+form button,
+.qrButton,
+.consultar-link button {
+  color: black;
+  border: none;
+  border-radius: 50px;
+  padding: 12px 20px;
+  cursor: pointer;
+  margin: 10px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+}
+
+button:hover,
+.borrar:hover,
+.agregar:hover,
+.qrButton:hover,
+.consultar-link button:hover {
+  background-color: #3474ff;
+  transform: translateY(-3px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #fff;
+}
+
+.qrButton {
+  background-color: #06b3aa;
+}
+
+form button#guardar {
+  background-color: #3498db;
+}
+
+form button#limpiar {
+  background-color: #e74c3c;
+}
+
+.consultar-link a {
+  display: inline-flex;
+  align-items: center;
+}
+
+.consultar-link button {
+  background-color: #4CAF50;
+  border-radius: 100px;
+  text-decoration: none;
+}
+
+button#guardar span,
+button#limpiar span {
+  margin-right: 8px; /* Espacio entre el icono y el texto */
+}
+
+button#guardar i,
+button#limpiar i {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
