--- a/almacen_app/static/css/styles4.css
+++ b/almacen_app/static/css/styles4.css
@@ -1,12 +1,33 @@
-
 /* Estilos página reportes */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url('https://www.uacm.edu.mx/portals/_default/skins/wcga-uacm/images/Plantel.jpg');
-    background-size: contain; /* Ajusta la imagen para que se vea completa */
+    margin: 0;
+    background-image: url('../img/img1.jpg');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    color: #0a0a0a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    backdrop-filter: blur(4px);
+    color: rgb(0, 0, 0, 0.5);
+}
+
+/* Encabezado */
+h1 {
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    padding: 10px 20px;
+    background-color: rgba(252, 140, 65, 0.788);
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 /* Contenedor principal */
@@ -14,22 +35,17 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9); /* Fondo semi-transparente */
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-}
-
-/* Encabezado */
-h1 {
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 20px;
-    color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Formulario */
 form {
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -38,6 +54,7 @@ form {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    width: 100%;
 }
 
 /* Botones */
@@ -49,10 +66,43 @@ button {
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
+    color: black;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-left: 15px;
+    height: 50px;
 }
 
+.r_producto {
+    background-color: #503bc9;
+}
+
+.r_solicitud{
+    background-color: #c054ca;
+}
+
+.pdf {
+    background-color: #3aac4d;
+}
+.borrar{
+    background-color: #ce3b3b;
+}
+
+button i {
+    margin-right: 10px;
+}
+
+button:hover {
+    background-color: #337dcc;
+    transform: translateY(-3px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 /* Tablas */
 .table-container {
+    width: 200%;
     margin-top: 30px;
 }
 
@@ -60,7 +110,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); /* Sombra ligera para las tablas */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
@@ -70,17 +120,19 @@ th, td {
 }
 
 th {
-    background-color: #f2f2f2; /* Color de fondo para las cabeceras */
+    background-color: #f2f2f2;
     font-weight: bold;
+    color: #333;
+}
+
+td {
+    background-color: #fff;
+    color: #333;
 }
 
 /* Estilos para las tablas específicas */
-#productosTabla {
-    display: none; /* Ocultar la tabla de productos inicialmente */
-}
-
-#solicitudesTabla {
-    display: none; /* Ocultar la tabla de solicitudes inicialmente */
+#productosTabla, #solicitudesTabla {
+    display: none; /* Ocultar las tablas inicialmente */
 }
 
 /* Estilos para mensajes de error o éxito */
@@ -88,4 +140,86 @@ th {
     margin-top: 20px;
     text-align: center;
     font-weight: bold;
+    color: #ff0000;
+}
+
+/* Contenedor de formulario */
+.formulario-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.formulario, .formulario-correo {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.formulario label, .formulario-correo label {
+    font-size: 16px;
+    color:black;
+}
+
+.formulario input, .formulario textarea, .formulario select,
+.formulario-correo input, .formulario-correo textarea, .formulario-correo select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 3px solid #3c80e7;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0, 0.5);
+    color: #000000;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+/* Contenedor de tabla */
+.tabla-container {
+    width: 100%;
+}
+
+.tabla-solicitud {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 100%;
+}
+
+.tabla-solicitud table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.tabla-solicitud th, .tabla-solicitud td {
+    padding: 10px;
+    text-align: center;
+    border: 3px solid #740404;
+}
+
+.tabla-solicitud th {
+    background-color: #e23517b0;
+    color: #000;
+}
+
+.tabla-solicitud td {
+    background-color: #fff;
+    color: #333;
+}
+.form-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+label{
+color: #000;
 }
