--- a/almacen_app/static/css/styles5.css
+++ b/almacen_app/static/css/styles5.css
@@ -33,7 +33,6 @@ body {
     background: linear-gradient(135deg, #4ebef2d0, #74b2f1d0); /* Cambiar color de fondo a degradado azul */
     background-color: rgba(0, 0, 0, 0.8); /* Cambiar color de fondo al pasar el mouse */
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4); /* Aumentar sombra */
-    transform: translate(-10%, -5px); /* Elevación sutil al pasar el mouse */
 }
 
 .formulario {
@@ -46,6 +45,25 @@ body {
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     animation: slideIn 0.5s ease;
+}
+
+.contenido {
+    display: flex;
+    flex-wrap: wrap; /* Permite que los elementos se distribuyan en varias filas */
+    justify-content: space-between; /* Distribuye los elementos horizontalmente */
+    align-items: center; /* Centra verticalmente los elementos */
+    padding: 40px;
+    width: 100%; /* Ajusta el ancho para que sea el 100% del contenedor padre */
+    box-sizing: border-box; /* Incluye el padding y el border en el ancho total */
+    transition: all 0.3s ease; /* Agregamos una transición suave */
+    animation: fadeIn 0.5s ease; /* Agregamos una animación de entrada */
+    border-color: #000000;
+}
+
+.contenido > * {
+    flex: 1 1 45%; /* Los elementos ocupan el 45% del ancho del contenedor, permitiendo espacio para el gap */
+    margin-bottom: 20px; /* Espacio inferior entre filas */
+    box-sizing: border-box; /* Incluye padding y border en el tamaño total */
 }
 
 @keyframes slideIn {
@@ -62,6 +80,7 @@ body {
 .formulario label,
 .formulario select,
 .formulario input {
+    flex-direction: column;
     margin: 10px auto;
 }
 
@@ -85,20 +104,31 @@ body {
 
 .formulario button {
     margin-bottom: 10px;
-    background-color: #2fc96a;
-    color: #fff;
+    color: #000000;
     padding: 10px 24px; /* Aumentado el relleno */
     border: none;
     border-radius: 25px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s, color 0.3s;
-    justify-content: space-around;
+    white-space: nowrap; 
+    display: flex;
+    height: 40px; /* Altura fija para todos los botones */
+    justify-content: center;
+    align-items: center;
+}
+.borrar{
+    background-color: #d8375a;
+}
+.agregar{
+    background-color: #27dd88;
 }
 
 .formulario button i {
     margin-bottom: 10px;
-    margin-right: auto; /* Espaciado entre el icono y el texto del botón */
+    margin-right: 10px; /* Espaciado entre el icono y el texto del botón */
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .formulario button:hover {
@@ -106,4 +136,13 @@ body {
     transform: translateY(-3px); /* Agregamos un efecto de elevación al pasar el mouse */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     color: #fff;
+}
+
+input{
+    width: calc(100% - 30px);
+    border: 5px solid #3c80e7; /* Cambia el grosor y el color del borde */
+    border-radius: 50px;
+    padding: 10px; /* Ajusta el relleno del formulario */
+    font-size: 15px; /* Ajusta el tamaño del texto en el formulario */
+    transition: border-color 0.3s ease; /* Efecto de transición en el borde */
 }
