--- a/almacen_app/templates/generar_reportes.html
+++ b/almacen_app/templates/generar_reportes.html
@@ -1,145 +1,145 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=1366, initial-scale=0.8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title> Reportes e inventario </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Inventario e Informes</title>
     <link rel="preload" href="/static/css/normalize.css" as="style">
     <link rel="preload" href="/static/css/styles4.css">
     <link rel="stylesheet" type="text/css" href="/static/css/styles4.css">
     <link rel="icon" href="https://www.pngmart.com/files/8/Report-PNG-Photos.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-GLhlTQ8i04Ndoq3xM9z0D7bo9K9QQKy4XpL/06Pnb5EC8dtKb5voBbZefYPJl+q" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="/static/js/jquery-3.5.1.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
 </head>
-    <body>
-        <div class="container">
-            <h1 class="mt-5">Generar reporte de inventario e informes</h1>
-            <form id="reporteProductosForm" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="fecha_inicio">Fecha de Inicio:</label>
-                    <input type="date" class="form-control" id="fecha_inicio" name="fecha_inicio">
-                </div>
-                <div class="form-group">
-                    <label for="fecha_fin">Fecha de Fin:</label>
-                    <input type="date" class="form-control" id="fecha_fin" name="fecha_fin">
-                </div>
-                <div class="button-container">
-                    <button type="button" id="generarReporteProductosBtn" class="btn btn-primary">Generar Reporte de Productos</button>
-                    <button type="button" id="generarReporteSolicitudesBtn" class="btn btn-primary">Generar Reporte de Solicitudes</button>
-                    <button type="button" id="descargarPdfBtn" class="btn btn-success">Descargar PDF</button>
-                    <button type="button" id="limpiarCamposBtn" class="btn btn-danger">Limpiar Campos</button>
-                </div>
-            </form>
-    
-            <div id="productosTabla" class="table-container">
-                <h2>Inventario de Productos</h2>
-                <table id="productosTable" class="table">
-                    <!-- Aquí se mostrarán los productos generados dinámicamente -->
-                </table>
+<body>
+    <div class="container">
+        <h1 class="mt-5">Generar reportes e inventario</h1>
+        <form id="reporteProductosForm" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="fecha_inicio">Fecha de Inicio:</label>
+                <input type="date" class="form-control" id="fecha_inicio" name="fecha_inicio">
             </div>
-    
-            <div id="solicitudesTabla" class="table-container">
-                <h2>Informe de Solicitudes</h2>
-                <table id="solicitudesTable" class="table">
-                    <!-- Aquí se mostrarán las solicitudes de productos generadas dinámicamente -->
-                </table>
+            <div class="form-group">
+                <label for="fecha_fin">Fecha de Fin:</label>
+                <input type="date" class="form-control" id="fecha_fin" name="fecha_fin">
             </div>
-    
-            <div id="message" class="message"></div>
+            <div class="button-container">
+                <button type="button" class="r_producto" id="generarReporteProductosBtn" class="btn btn-primary"><i class="fas fa-box-open"></i>Reporte de Productos</button>
+                <button type="button" class="r_solicitud"id="generarReporteSolicitudesBtn" class="btn btn-primary"><i class="fas fa-file-alt"></i> Reporte de Solicitudes</button>
+                <button type="button" class="pdf" id="descargarPdfBtn" class="btn btn-success"><i class="fas fa-download"></i> Descargar PDF</button>
+                <button type="button" class="borrar" id="limpiarCamposBtn" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Limpiar Campos</button>
+            </div>
+        </form>
+
+        <div id="productosTabla" class="table-container">
+            <h2>Inventario de Productos</h2>
+            <table id="productosTable" class="table">
+                <!-- Aquí se mostrarán los productos generados dinámicamente -->
+            </table>
         </div>
-    
-        <!-- JavaScript -->
-        <script src="{% static 'jquery-3.5.1.js' %}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                $('#generarReporteProductosBtn').click(function() {
-                    generarReporte('productos');
-                });
-    
-                $('#generarReporteSolicitudesBtn').click(function() {
-                    generarReporte('solicitudes');
-                });
-    
-                $('#descargarPdfBtn').click(function() {
-                    descargarPDF();
-                });
-    
-                $('#limpiarCamposBtn').click(function() {
-                    $('#fecha_inicio').val('');
-                    $('#fecha_fin').val('');
-                    $('#productosTable').empty();
-                    $('#productosTabla').hide();
-                    $('#solicitudesTable').empty();
-                    $('#solicitudesTabla').hide();
-                    $('#message').html('Campos limpiados').removeClass('text-danger').addClass('text-success');
-                });
-    
-                function generarReporte(tipo) {
-                    var fechaInicio = $('#fecha_inicio').val();
-                    var fechaFin = $('#fecha_fin').val();
-    
-                    $.ajax({
-                        url: '{% url "generar_reportes" %}',
-                        type: 'POST',
-                        data: {
-                            csrfmiddlewaretoken: '{{ csrf_token }}',
-                            fecha_inicio: fechaInicio,
-                            fecha_fin: fechaFin,
-                            tipo_reporte: tipo
-                        },
-                        success: function(response) {
-                            var data = response[tipo];
-                            var html = '<table class="table"><thead>';
-    
-                            if (tipo === 'productos') {
-                                html += '<tr><th>ID Producto</th><th>Nombre Producto</th><th>Cantidad Total</th><th>Tipo Almacén</th><th>Dirección</th><th>Correo</th><th>Teléfono</th></tr>';
-                            } else if (tipo === 'solicitudes') {
-                                html += '<tr><th>ID Solicitud</th><th>Tipo Almacén</th><th>Nombre Persona</th><th>Nombre Producto</th><th>Cantidad</th><th>Fecha Solicitud</th></tr>';
-                            }
-    
-                            html += '</thead><tbody>';
-    
-                            data.forEach(function(item) {
-                                if (tipo === 'productos') {
-                                    html += '<tr><td>' + item.id_producto + '</td><td>' + item.nombre_producto + '</td><td>' + item.cantidad_total + '</td><td>' + item.tipo_almacen + '</td><td>' + item.direccion + '</td><td>' + item.correo + '</td><td>' + item.telefono + '</td></tr>';
-                                } else if (tipo === 'solicitudes') {
-                                    html += '<tr><td>' + item.id_solicitud + '</td><td>' + item.tipo_almacen + '</td><td>' + item.nombre_persona + '</td><td>' + item.nombre_producto + '</td><td>' + item.cantidad + '</td><td>' + item.fecha_solicitud + '</td></tr>';
-                                }
-                            });
-    
-                            html += '</tbody></table>';
-    
-                            if (tipo === 'productos') {
-                                $('#productosTable').html(html);
-                                $('#productosTabla').show();
-                                $('#solicitudesTabla').hide();
-                            } else if (tipo === 'solicitudes') {
-                                $('#solicitudesTable').html(html);
-                                $('#solicitudesTabla').show();
-                                $('#productosTabla').hide();
-                            }
-                        },
-                        error: function(xhr, status, error) {
-                            $('#message').html('Error al generar el reporte').addClass('text-danger');
-                            console.log(xhr.responseText);
-                        }
-                    });
-                }
-    
-                function descargarPDF() {
-                    var pdf = new jsPDF();
-    
-                    pdf.text(20, 20, 'Este es un ejemplo de contenido en el PDF.');
-    
-                    pdf.save('reporte.pdf');
-                }
+
+        <div id="solicitudesTabla" class="table-container">
+            <h2>Informe de Solicitudes</h2>
+            <table id="solicitudesTable" class="table">
+                <!-- Aquí se mostrarán las solicitudes de productos generadas dinámicamente -->
+            </table>
+        </div>
+
+        <div id="message" class="message"></div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="/static/js/jquery-3.5.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#generarReporteProductosBtn').click(function() {
+                generarReporte('productos');
             });
-        </script>
-    </body>
+
+            $('#generarReporteSolicitudesBtn').click(function() {
+                generarReporte('solicitudes');
+            });
+
+            $('#descargarPdfBtn').click(function() {
+                descargarPDF();
+            });
+
+            $('#limpiarCamposBtn').click(function() {
+                $('#fecha_inicio').val('');
+                $('#fecha_fin').val('');
+                $('#productosTable').empty();
+                $('#productosTabla').hide();
+                $('#solicitudesTable').empty();
+                $('#solicitudesTabla').hide();
+                $('#message').html('Campos limpiados').removeClass('text-danger').addClass('text-success');
+            });
+
+            function generarReporte(tipo) {
+                var fechaInicio = $('#fecha_inicio').val();
+                var fechaFin = $('#fecha_fin').val();
+
+                $.ajax({
+                    url: '{% url "generar_reportes" %}',
+                    type: 'POST',
+                    data: {
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                        fecha_inicio: fechaInicio,
+                        fecha_fin: fechaFin,
+                        tipo_reporte: tipo
+                    },
+                    success: function(response) {
+                        var data = response[tipo];
+                        var html = '<table class="table"><thead>';
+
+                        if (tipo === 'productos') {
+                            html += '<tr><th>ID Producto</th><th>Nombre Producto</th><th>Cantidad Total</th><th>Tipo Almacén</th><th>Dirección</th><th>Correo</th><th>Teléfono</th></tr>';
+                        } else if (tipo === 'solicitudes') {
+                            html += '<tr><th>ID Solicitud</th><th>Tipo Almacén</th><th>Nombre Persona</th><th>Nombre Producto</th><th>Cantidad</th><th>Fecha Solicitud</th></tr>';
+                        }
+
+                        html += '</thead><tbody>';
+
+                        data.forEach(function(item) {
+                            if (tipo === 'productos') {
+                                html += '<tr><td>' + item.id_producto + '</td><td>' + item.nombre_producto + '</td><td>' + item.cantidad_total + '</td><td>' + item.tipo_almacen + '</td><td>' + item.direccion + '</td><td>' + item.correo + '</td><td>' + item.telefono + '</td></tr>';
+                            } else if (tipo === 'solicitudes') {
+                                html += '<tr><td>' + item.id_solicitud + '</td><td>' + item.tipo_almacen + '</td><td>' + item.nombre_persona + '</td><td>' + item.nombre_producto + '</td><td>' + item.cantidad + '</td><td>' + item.fecha_solicitud + '</td></tr>';
+                            }
+                        });
+
+                        html += '</tbody></table>';
+
+                        if (tipo === 'productos') {
+                            $('#productosTable').html(html);
+                            $('#productosTabla').show();
+                            $('#solicitudesTabla').hide();
+                        } else if (tipo === 'solicitudes') {
+                            $('#solicitudesTable').html(html);
+                            $('#solicitudesTabla').show();
+                            $('#productosTabla').hide();
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        $('#message').html('Error al generar el reporte').addClass('text-danger');
+                        console.log(xhr.responseText);
+                    }
+                });
+            }
+
+            function descargarPDF() {
+                var pdf = new jsPDF();
+
+                pdf.text(20, 20, 'Este es un ejemplo de contenido en el PDF.');
+
+                pdf.save('reporte.pdf');
+            }
+        });
+    </script>
+</body>
 </html>
-    
