--- a/almacen_app/templates/registrar_productos.html
+++ b/almacen_app/templates/registrar_productos.html
@@ -2,63 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=1366, initial-scale=0.8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Producto</title>
     <link rel="preload" href="/static/css/normalize.css" as="style">
-    <link rel="preload" href="/static/css/styles8.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/styles8.css">
+    <link rel="preload" href="/static/css/styles3.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/styles3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="/static/img/report_icon.png" type="image/x-icon">
 </head>
 <body>
-
-    <div class="principal">
-        <h1>Registrar Producto</h1>
-    </div>
-    <form method="POST" action="{% url 'registrar_productos' %}">
+    <h1>Registrar Producto</h1>
+        <form method="POST" action="{% url 'registrar_productos' %}">
         {% csrf_token %}
         <label for="id">ID del Producto:</label>
         <input type="text" id="id" name="id">
         <label for="nombre">Nombre del Producto:</label>
         <input type="text" id="nombre" name="nombre">
         <label for="cantidad">Cantidad:</label>
-        <input type="text" id="cantidad" name="cantidad">
-        <button type="submit" id="guardar">Registrar Producto</button>
-        <button type="button" id="limpiar" onclick="limpiarCampos()"><i class="fas fa-trash-alt"></i>Limpiar Campos</button>
-        <a href="{% url 'consultar_productos' %}" class="consultar-link">
-            <button type="button"><i class="fas fa-search"></i>Consultar Productos</button>
-        </a>
+            <div class="formulario">
+                <input type="number" id="cantidad" name="cantidad" min="1" />
+                <button clas="agregar" type="submit" id="guardar"> <i class="fas fa-save"></i> Registrar Producto </button>
+                <button class="borrar" type="submit" id="limpiar" onclick="limpiarCampos()"><i class="fas fa-trash-alt"></i>Limpiar Campos</button>
+                <a href="{% url 'consultar_productos' %}" class="consultar-link">
+                <button type="button"><i class="fas fa-search"></i> Consultar Productos</button></a>
+            </div>
     </form>
-    <button id="qrButton" onclick="toggleScanner()"> <i class="fas fa-qrcode"></i> Escanear QR </button>
+
+    <!-- Botón para mostrar u ocultar el escáner de QR -->
+    <div class="formulario_qr">
+        <button class="qrButton" type="submit" id="qrButton" onclick="toggleScanner()"> <i class="fas fa-qrcode"></i> Escanear QR </button>
+    </div>
+
     <!-- Contenedor para el escáner de QR -->
-    <div id="scannerContainer">
+    <div id="scannerContainer" style="display: none;">
         <div id="reader"></div>
         <div id="result"></div>
     </div>
+
     <!-- Mostrar el escáner de QR -->
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script>
         var scannerVisible = false;
         var htmlScanner = null;
-    
+
         function toggleScanner() {
             if (scannerVisible) {
-                htmlScanner.stop();
+                if (htmlScanner && typeof htmlScanner.stop === 'function') {
+                    htmlScanner.stop();
+                }
                 document.getElementById('scannerContainer').style.display = 'none';
                 scannerVisible = false;
             } else {
-                htmlScanner.render(onScanSuccess);
+                if (htmlScanner) {
+                    htmlScanner.render(onScanSuccess);
+                }
                 document.getElementById('scannerContainer').style.display = 'block';
                 scannerVisible = true;
             }
         }
-    
+
         function limpiarCampos() {
             document.getElementById("id").value = "";
             document.getElementById("nombre").value = "";
             document.getElementById("cantidad").value = "";
         }
-    
+
         function domReady(fn) {
             if (document.readyState === "complete" || document.readyState === "interactive") {
                 setTimeout(fn, 1);
@@ -66,20 +75,27 @@
                 document.addEventListener("DOMContentLoaded", fn);
             }
         }
-    
+
         domReady(function() {
             htmlScanner = new Html5QrcodeScanner(
                 "reader", { fps: 10, qrbox: 350 }
             );
         });
-    
+
         function onScanSuccess(decodedText, decodedResult) {
-            var resultContainer = document.getElementById('result');
-            if (resultContainer) {
-                resultContainer.innerHTML = 'Tu QR es: ' + decodedText;
-                // Redirigir a la página después de leer el QR
-                window.location.href = decodedText; // Cambia esta línea según el formato de la URL que devuelve tu lector de QR
-            }
+            // Parsamos el texto del código QR, y extraemos el ID, nombre y cantidad
+            var qrData = decodedText.split("\n");
+            var idProducto = qrData[0].split(": ")[1];
+            var nombreProducto = qrData[1].split(": ")[1];
+            var cantidad = qrData[2].split(": ")[1];
+
+            // Llenamos la informacion del formulario con los extraido del QR
+            document.getElementById("id").value = idProducto;
+            document.getElementById("nombre").value = nombreProducto;
+            document.getElementById("cantidad").value = cantidad;
+
+            // Ocultar el escáner de QR después de llenar los campos
+            toggleScanner();
         }
     </script>
 </body>
